# notification-agent-mcp-server

./: .dockerignore  .docs-manifest.yml  .env.example  .gitignore  .publish-exclude  .venv_setup  AGENT-LESSONS.md  BUILD.md  CHANGELOG.md  CONTEXT-SUMMARY.md  Dockerfile  Dockerfile.public  EXTERNAL-BUILD.md  LICENCE  Makefile  NOTICE  PUBLICATION-SMOKE.md  README.md  RULES.md  defaults.yaml  docker-build.sh  docker-compose.local-docker.yml  docker-entrypoint.sh  docker-env.example  docker-env.public.example  docker-healthcheck.sh  env.example  local-docker-server.sh  pyproject.toml  pytest.ini  requirements.lock.EXCEPTION.md  requirements.txt  server_control.sh  start_a2a_server.py  start_api_server.py  start_delivery_worker.py  start_mcp_server.py  start_web_server.py
certs/: README.md
database/: README.md
database/migrations/: 001_initial_schema.sql  002_add_message_guid.sql  002_user_management_personalization.sql  003_notification_storage_and_media.sql  004_add_delivery_metadata_json.sql  006_add_message_subject.sql  007_ukraine_digest_groups.sql  008_rbac_bindings.sql
docker/: README.md  docker-compose.yml
docs/: A2A-REFERENCE.md  API-REFERENCE.md  ARCHITECTURE.md  AUDIT-EVENTS.md  BUILD.md  CHANGELOG.md  DATA-MODEL.md  DEPLOY.md  DOCKER.md  ENV-REFERENCE.md  LLM-TEST-RESULTS.md  LLM-VARIANTS.md  LLM_VARIANTS.md  MCP-REFERENCE.md  PARAMETERS.md  PREPROD.md  PROMPTS.md  README.md  REQ-COVERAGE.md  REQUIREMENTS.md  ROLES-AND-USECASES.md  TEST-HISTORY.md  TEST-STATUS.md  TESTS.md  WARRANTY-1.0RC01.md  WEBUI-REFERENCE.md  openapi.json
scripts/: README.md  add_dependency_checks_to_tests.py  cleanup_stuck_messages.py  run_docker_smoke.sh  run_migration.py  test_server.sh  validate-vault.sh
src/: __init__.py  openapi.yaml
src/adapters/: __init__.py  base.py  chat_adapter.py  file_adapter.py  loopback_adapter.py  mock_chat.py  mock_email.py  mock_sms.py  registry.py  sms_adapter.py  smtp_adapter.py  twilio_sms_adapter.py  whatsapp_adapter.py
src/config/: __init__.py  runtime_config.py
src/core/: __init__.py  cache_integration.py  delivery_worker.py  job_manager.py  state_machine.py
src/database/: __init__.py  db_manager.py  repositories.py
src/servers/: __init__.py  unified_app.py
src/stylesheets/: default.css
src/utils/: __init__.py  logger.py  platform_logging_core.py
test-storage/: .gitkeep
tests/: README.md  SCOPE-MAP.md  TEST-SCRIPT.md  __init__.py  conftest.py  run_all_multimedia_tests.py  test_pdf_validation.py
tests/Examples/: README.md  Test-2000chars-ar.md  Test-2000chars-de.md  Test-2000chars-en.md  Test-2000chars-pl.md  Test-2000chars-zh.md  Test-400chars-ar.md  Test-400chars-de.md  Test-400chars-en.md  Test-400chars-hi.md  Test-400chars-pl.md  Test-400chars-zh.md  Test-5000chars-ar.md  Test-5000chars-de.md  Test-5000chars-en.md  Test-5000chars-hi.md  Test-5000chars-pl.md  Test-5000chars-zh.md  Test-Brief-News.md  Test-Brief-News.txt  (+6 more)
ui/: README.md
(+383 files in other folders)
